--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.1"
   }
 }
